Improve STONX allocation discovery
